# rustretro

./: .gitignore  ARCHITECTURE.md  COMPLETION_REPORT.txt  Cargo.toml  DEBUGGING.md  DEBUGGING_SUMMARY.md  DEBUG_VERIFICATION_QUICKSTART.md  DELIVERABLES.md  DEMO_GUIDE.md  DISASSEMBLY_ROOT_CAUSE_ANALYSIS.md  DISASSEMBLY_STATUS.md  DISASSEMBLY_TROUBLESHOOTING.md  DISASSEMBLY_WORKAROUND.md  EXAMPLES.md  FFI_FIX_VERIFICATION.md  FINAL_MAME_REPORT.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.txt  INDEX.md  INVESTIGATION_COMPLETE.md  INVESTIGATION_SUMMARY.txt  MAME_FFI_INVESTIGATION.md  PHASE1_CAPSTONE_FINDINGS.md  PHASE2_MEMORY_FINDINGS.md  PHASE3_DISASM_FINDINGS.md  PHASE4_DECISION.md  README.md  RESOURCE_GUIDE.md  ROADMAP.md  ROM_MAP_FORMAT.md  SESSION_SUMMARY.md  SETUP.md  TEST_1_RESULTS.md  TEST_PLAN_AND_RESULTS.md  UPDATED_TEST_PLAN.md  run_comprehensive_tests.sh  test_rom_in_retroarch.sh  test_rom_in_rustretro.sh
cfg/: ra_asurabld.cfg  ra_mvscu.cfg
docs/tutorials/: README.md  _tutorials.md  audio.md  cpu-registers.md  disassembly-and-breakpoints.md  docking-workspace.md  getting-started.md  hex-dump.md  input-and-triggers.md  lua-scripting.md  ram-search.md  regions-heatmap-bookmarks.md  tiles-and-frames.md  tracking-changes.md  vdp-registers.md  watch-and-freeze.md
examples/: cps2_oam_probe.lua  frame_meter.lua  hitbox_demo.lua
nvram/: mvscu.nv
scripts/: mount-build-volume.sh
scripts/re/: screen_tools.py
src/: audio.rs  capstone_test.rs  frontend.rs  libretro.rs  libretro.rs.bak  lua_engine.rs  main.rs  phase2_test.rs  sdl_interface.rs
src/debug/: dock.rs  mod.rs  vdp_source.rs  window.rs
src/debug/panels/: audio_controls.rs  cpu_state.rs  disassembly.rs  frame_inspector.rs  frame_log.rs  help.rs  hex_dump.rs  hex_tint.rs  input_monitor.rs  mod.rs  ram_search.rs  regions.rs  script_panel.rs  tile_viewer.rs  triggers.rs  vdp_registers.rs  watch.rs
src/litui_pages/: mod.rs
src/litui_pages/content/: _app.md  audio.md  cpu.md  log.md
src/mcp/: ines.rs  mod.rs  server.rs  snapshot.rs
