[package]
name = "rustretro"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
libloading = "0.8"
thiserror = "1.0"
anyhow = "1.0"
memoffset = "0.9"
bevy = "0.15"
bevy_egui = "0.33"
cpal = "0.15"
image = { version = "0.25", default-features = false, features = ["png"] }

[profile.release]
opt-level = 3
lto = true
